--- a/index.html
+++ b/index.html
@@ -144,18 +144,18 @@
           <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="offerings.html" class="image featured"><img src="images/hot-tug.png" alt="" /></a>
-                <header style="margin-bottom: 50px;">
-                  <h3><a href="offerings.html">Hot Tug Experiences</a></h3>
+                <a href="hot-tug.html" class="image featured"><img src="images/hot-tug.png" alt="" /></a>
+                <header style="margin-bottom: 50px">
+                  <h3><a href="hot-tug.html">Hot Tug Experiences</a></h3>
                 </header>
                 <span></span>
               </section>
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="offerings.html" class="image featured"><img src="images/camping-retreat.jpg" alt="" /></a>
-                <header style="margin-bottom: 50px;">
-                  <h3><a href="offerings.html">Camping Retreats</a></h3>
+                <a href="camping.html" class="image featured"><img src="images/camping-retreat.jpg" alt="" /></a>
+                <header style="margin-bottom: 50px">
+                  <h3><a href="camping.html">Camping Retreats</a></h3>
                 </header>
                 <span></span>
               </section>
@@ -164,24 +164,23 @@
           <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="offerings.html" class="image featured"><img src="images/tent-tree.png" alt="" /></a>
-                <header style="margin-bottom: 50px;">
-                  <h3><a href="offerings.html">Tree Tent Accommodations</a></h3>
+                <a href="tree-tent.html" class="image featured"><img src="images/tent-tree.png" alt="" /></a>
+                <header style="margin-bottom: 50px">
+                  <h3><a href="tree-tent.html">Tree Tent Accommodations</a></h3>
                 </header>
                 <span></span>
               </section>
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="offerings.html" class="image featured"><img src="images/adventures.jpg" alt="" /></a>
-                <header style="margin-bottom: 50px;">
-                  <h3><a href="offerings.html">Guided Adventures</a></h3>
+                <a href="guided.html" class="image featured"><img src="images/adventures.jpg" alt="" /></a>
+                <header style="margin-bottom: 50px">
+                  <h3><a href="guided.html">Guided Adventures</a></h3>
                 </header>
                 <span></span>
               </section>
             </div>
           </div>
-
           <footer class="major">
             <ul class="buttons">
               <li><a href="offerings.html" class="button">See More</a></li>
