--- a/offerings.html
+++ b/offerings.html
@@ -29,7 +29,7 @@
         </nav>
       </header>
       <section id="banner">
-        <div class="inner">
+        <div class="inner inside">
           <header>
             <h2>What do we offer?</h2>
           </header>
@@ -49,9 +49,9 @@
           <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="offerings.html" class="image featured"><img src="images/hot-tug.png" alt="" /></a>
+                <a href="hot-tug.html" class="image featured"><img src="images/hot-tug.png" alt="" /></a>
                 <header>
-                  <h3>Hot Tug Experiences</h3>
+                  <h3><a href="hot-tug.html">Hot Tug Experiences</a></h3>
                 </header>
                 <p>
                   Enjoy unforgettable adventures on the water with your one-of-a-kind portable hot tubs. Guests can soak in the warm waters while cruising along
@@ -65,9 +65,9 @@
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="offerings.html" class="image featured"><img src="images/camping-retreat.jpg" alt="" /></a>
+                <a href="camping.html" class="image featured"><img src="images/camping-retreat.jpg" alt="" /></a>
                 <header>
-                  <h3>Camping Retreats</h3>
+                  <h3><a href="camping.html">Camping Retreats</a></h3>
                 </header>
                 <p>
                   Escape the hustle and bustle of city life with immersive camping retreats in picturesque locations. Set up camp in serene natural settings,
@@ -83,9 +83,9 @@
           <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="offerings.html" class="image featured"><img src="images/tent-tree.png" alt="" /></a>
+                <a href="tree-tent.html" class="image featured"><img src="images/tent-tree.png" alt="" /></a>
                 <header>
-                  <h3>Tree Tent Accommodations</h3>
+                  <h3><a href="tree-tent.html">Tree Tent Accommodations</a></h3>
                 </header>
                 <p>
                   Elevate the camping experience with unique tree tents suspended above the ground. These innovative accommodations offer comfort and adventure,
@@ -99,9 +99,9 @@
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="offerings.html" class="image featured"><img src="images/adventures.jpg" alt="" /></a>
+                <a href="guided.html" class="image featured"><img src="images/adventures.jpg" alt="" /></a>
                 <header>
-                  <h3>Guided Adventures</h3>
+                  <h3><a href="guided.html">Guided Adventures</a></h3>
                 </header>
                 <p>
                   Offer guided tours and experiences led by experienced outdoor enthusiasts. Whether it's exploring hidden gems in the wilderness, embarking on
@@ -110,6 +110,41 @@
                 </p>
                 <ul class="buttons">
                   <li><a href="#" class="button">Book now</a></li>
+                </ul>
+                <span></span>
+              </section>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6 col-12-narrower">
+              <section>
+                <a href="offerings.html" class="image featured"><img src="images/tent-tree.png" alt="" /></a>
+                <header style="margin-bottom: 50px">
+                  <h3><a href="offerings.html">Event Hosting</a></h3>
+                </header>
+                <p>
+                  Provide event hosting services for special occasions such as birthdays, anniversaries, bachelor/bachelorette parties, and corporate
+                  team-building events. Create unforgettable moments with unique settings, activities, and amenities that leave a lasting impression on guests.
+                </p>
+                <ul class="buttons">
+                  <li><a href="contact.html" class="button">Contact us</a></li>
+                </ul>
+                <span></span>
+              </section>
+            </div>
+            <div class="col-6 col-12-narrower">
+              <section>
+                <a href="offerings.html" class="image featured"><img src="images/adventures.jpg" alt="" /></a>
+                <header style="margin-bottom: 50px">
+                  <h3><a href="offerings.html">Equipment Rental and Sales</a></h3>
+                </header>
+                <p>
+                  Offer rental services for hot tubs, watercraft, tree tents, camping gear, and outdoor equipment, allowing guests to enjoy your adventures even
+                  if they prefer a self-guided experience. Additionally, provide opportunities for guests to purchase high-quality outdoor gear to enhance their
+                  own adventures beyond their time with your company.
+                </p>
+                <ul class="buttons">
+                  <li><a href="contact.html" class="button">Contact us</a></li>
                 </ul>
                 <span></span>
               </section>
