--- a/guided.html
+++ b/guided.html
@@ -30,7 +30,7 @@
       </header>
 
       <section id="banner" class="guided">
-        <div class="inner">
+        <div class="inner inside">
           <header>
             <h2>Guided Adventures</h2>
           </header>
@@ -132,55 +132,33 @@
         <!-- Three -->
         <section class="wrapper style3 container special">
           <header class="major">
-            <h2>Guided Adventures</h2>
+            <h2>What to expect</h2>
           </header>
 
           <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="offerings.html" class="image featured"><img src="images/hot-tug.png" alt="" /></a>
-                <header style="margin-bottom: 50px">
-                  <h3><a href="offerings.html">Hot Tug Experiences</a></h3>
-                </header>
-                <span></span>
+                <a href="images/adventure1.jpg" class="image featured"><img src="images/adventure1.jpg" alt="" /></a>
               </section>
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="offerings.html" class="image featured"><img src="images/camping-retreat.jpg" alt="" /></a>
-                <header style="margin-bottom: 50px">
-                  <h3><a href="offerings.html">Camping Retreats</a></h3>
-                </header>
-                <span></span>
+                <a href="images/adventure2.jpg" class="image featured"><img src="images/adventure2.jpg" alt="" /></a>
               </section>
             </div>
           </div>
           <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="offerings.html" class="image featured"><img src="images/tent-tree.png" alt="" /></a>
-                <header style="margin-bottom: 50px">
-                  <h3><a href="offerings.html">Tree Tent Accommodations</a></h3>
-                </header>
-                <span></span>
+                <a href="images/adventure3.jpg" class="image featured"><img src="images/adventure3.jpg" alt="" /></a>
               </section>
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="offerings.html" class="image featured"><img src="images/adventures.jpg" alt="" /></a>
-                <header style="margin-bottom: 50px">
-                  <h3><a href="offerings.html">Guided Adventures</a></h3>
-                </header>
-                <span></span>
+                <a href="images/adventure4.jpg" class="image featured"><img src="images/adventure4.jpg" alt="" /></a>
               </section>
             </div>
           </div>
-
-          <footer class="major">
-            <ul class="buttons">
-              <li><a href="offerings.html" class="button">See More</a></li>
-            </ul>
-          </footer>
         </section>
       </article>
 
