--- a/hot-tug.html
+++ b/hot-tug.html
@@ -30,7 +30,7 @@
       </header>
 
       <section id="banner" class="hot-tug">
-        <div class="inner">
+        <div class="inner inside">
           <header>
             <h2>Hot Tug Experiences</h2>
           </header>
@@ -132,55 +132,33 @@
         <!-- Three -->
         <section class="wrapper style3 container special">
           <header class="major">
-            <h2>Hot Tug <strong>Experience</strong></h2>
+            <h2>What to expect</h2>
           </header>
 
           <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="offerings.html" class="image featured"><img src="images/hot-tug.png" alt="" /></a>
-                <header style="margin-bottom: 50px">
-                  <h3><a href="offerings.html">Hot Tug Experiences</a></h3>
-                </header>
-                <span></span>
+                <a href="images/hot-tug1.png" class="image featured"><img src="images/hot-tug1.png" alt="" /></a>
               </section>
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="offerings.html" class="image featured"><img src="images/camping-retreat.jpg" alt="" /></a>
-                <header style="margin-bottom: 50px">
-                  <h3><a href="offerings.html">Camping Retreats</a></h3>
-                </header>
-                <span></span>
+                <a href="images/hot-tug2.png" class="image featured"><img src="images/hot-tug2.png" alt="" /></a>
               </section>
             </div>
           </div>
           <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="offerings.html" class="image featured"><img src="images/tent-tree.png" alt="" /></a>
-                <header style="margin-bottom: 50px">
-                  <h3><a href="offerings.html">Tree Tent Accommodations</a></h3>
-                </header>
-                <span></span>
+                <a href="images/hot-tug3.png" class="image featured"><img src="images/hot-tug3.png" alt="" /></a>
               </section>
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="offerings.html" class="image featured"><img src="images/adventures.jpg" alt="" /></a>
-                <header style="margin-bottom: 50px">
-                  <h3><a href="offerings.html">Guided Adventures</a></h3>
-                </header>
-                <span></span>
+                <a href="images/hot-tug4.png" class="image featured"><img src="images/hot-tug4.png" alt="" /></a>
               </section>
             </div>
           </div>
-
-          <footer class="major">
-            <ul class="buttons">
-              <li><a href="offerings.html" class="button">See More</a></li>
-            </ul>
-          </footer>
         </section>
       </article>
 
