--- a/guided.html
+++ b/guided.html
@@ -23,6 +23,7 @@
                 <li><a href="guided.html">Guided Adventures</a></li>
               </ul>
             </li>
+            <li><a href="#">Custom experience</a></li>
             <li><a href="aboutus.html">About us</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
