--- a/aboutus.html
+++ b/aboutus.html
@@ -23,14 +23,14 @@
                 <li><a href="guided.html">Guided Adventures</a></li>
               </ul>
             </li>
-            <li><a href="#">Custom experience</a></li>
+            <li><a href="#">Custom experiences</a></li>
             <li class="current"><a href="aboutus.html">About us</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
       </header>
       <section id="banner">
-        <div class="inner">
+        <div class="inner inside">
           <header>
             <h2>About us</h2>
           </header>
@@ -41,8 +41,10 @@
       <article id="main">
         <header class="special container">
           <h2>
-            Powered by eco-friendly wood-fired heaters, our hot tugs offer a sustainable way to enjoy the water while minimizing our environmental footprint.
-            Safety and comfort are our top priorities, ensuring that every adventure with us is not only memorable but also secure.
+            At Jacuzzi Journey, our mission is to provide unforgettable outdoor experiences that blend the serenity of nature with the luxury of hot tug and
+            camping relaxation. We are dedicated to creating unique, eco-friendly adventures that rejuvenate the mind, body, and spirit, while ensuring
+            exceptional customer service and a deep respect for the environment. Our goal is to inspire a love for the outdoors and create lasting memories for
+            every guest.
           </h2>
         </header>
 
