--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
                 <li><a href="guided.html">Guided Adventures</a></li>
               </ul>
             </li>
-            <li><a href="#">Custom experience</a></li>
+            <li><a href="#">Custom experiences</a></li>
             <li><a href="aboutus.html">About us</a></li>
             <li class="current"><a href="contact.html">Contact</a></li>
           </ul>
@@ -79,7 +79,7 @@
 					</ul> -->
 
         <ul class="copyright">
-          <li>&copy; Untitled</li>
+          <li>&copy; Jacuzzi Journeys</li>
         </ul>
       </footer>
     </div>
