--- a/offerings.html
+++ b/offerings.html
@@ -250,7 +250,7 @@
         <footer>
           <ul class="buttons">
             <li><a href="#" class="button primary">Book now</a></li>
-            <li><a href="#" class="button">Contact us</a></li>
+            <li><a href="contact.html" class="button">Contact us</a></li>
           </ul>
         </footer>
       </section>
