--- a/offerings.html
+++ b/offerings.html
@@ -119,9 +119,9 @@
           <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="offerings.html" class="image featured"><img src="images/tent-tree.png" alt="" /></a>
+                <a href="contact.html" class="image featured"><img src="images/events.jpg" alt="" /></a>
                 <header style="margin-bottom: 50px">
-                  <h3><a href="offerings.html">Event Hosting</a></h3>
+                  <h3><a href="contact.html">Event Hosting</a></h3>
                 </header>
                 <p>
                   Provide event hosting services for special occasions such as birthdays, anniversaries, bachelor/bachelorette parties, and corporate
@@ -135,9 +135,9 @@
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="offerings.html" class="image featured"><img src="images/adventures.jpg" alt="" /></a>
+                <a href="contact.html" class="image featured"><img src="images/equipment.png" alt="" /></a>
                 <header style="margin-bottom: 50px">
-                  <h3><a href="offerings.html">Equipment Rental and Sales</a></h3>
+                  <h3><a href="contact.html">Equipment Rental and Sales</a></h3>
                 </header>
                 <p>
                   Offer rental services for hot tubs, watercraft, tree tents, camping gear, and outdoor equipment, allowing guests to enjoy your adventures even
