--- a/experiences.html
+++ b/experiences.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hot Tug Experiences | Jacuzzi Journeys</title>
+    <title>Custom experiences | Jacuzzi Journeys</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -14,7 +14,7 @@
         <nav id="nav">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li class="submenu current">
+            <li class="submenu">
               <a href="offerings.html">Offerings</a>
               <ul>
                 <li><a href="hot-tug.html">Hot Tug Experiences</a></li>
@@ -23,17 +23,17 @@
                 <li><a href="guided.html">Guided Adventures</a></li>
               </ul>
             </li>
-            <li><a href="experiences.html">Custom experiences</a></li>
+            <li class="current"><a href="experiences.html">Custom experiences</a></li>
             <li><a href="aboutus.html">About us</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
       </header>
 
-      <section id="banner" class="hot-tug">
+      <section id="banner" class="guided">
         <div class="inner inside">
           <header>
-            <h2>Hot Tug Experiences</h2>
+            <h2>Custom experiences</h2>
           </header>
         </div>
       </section>
@@ -41,8 +41,8 @@
       <article id="main">
         <header class="special container">
           <h2>
-            Enjoy unforgettable adventures on the water with your one-of-a-kind portable hot tubs. Guests can soak in the warm waters while cruising along
-            scenic waterways, taking in breathtaking views, and enjoying the company of friends or family.
+            We allow you to customize your hot tug camping experiences based on your preferences and interests. Whether you're seeking a peaceful retreat, an
+            active adventure, or a social gathering, we provide options to cater to diverse needs.
           </h2>
         </header>
 
@@ -133,30 +133,55 @@
         <!-- Three -->
         <section class="wrapper style3 container special">
           <header class="major">
-            <h2>What to expect</h2>
+            <h2>Are you looking for a specific experience?</h2>
           </header>
 
           <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="images/hot-tug1.png" class="image featured"><img src="images/hot-tug1.png" alt="" /></a>
+                <a href="images/adventure1.jpg" class="image featured"><img src="images/adventure1.jpg" alt="" /></a>
+                <header>
+                  <h3><a href="#">Romantic Getaways</a></h3>
+                </header>
+                <p>
+                  Enjoy unforgettable adventures on the water with your one-of-a-kind portable hot tubs. Guests can soak in the warm waters while cruising along
+                  scenic waterways, taking in breathtaking views, and enjoying the company of friends or family.
+                </p>
               </section>
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="images/hot-tug2.png" class="image featured"><img src="images/hot-tug2.png" alt="" /></a>
+                <a href="images/adventure2.jpg" class="image featured"><img src="images/adventure2.jpg" alt="" /></a>
+                <header>
+                  <h3><a href="#">Family-Friendly Adventures</a></h3>
+                </header>
+                <p>Packages designed for families, including larger tents or cabins, kid-friendly activities, and safety features suitable for children.</p>
               </section>
             </div>
           </div>
           <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="images/hot-tug3.png" class="image featured"><img src="images/hot-tug3.png" alt="" /></a>
+                <a href="images/adventure3.jpg" class="image featured"><img src="images/adventure3.jpg" alt="" /></a>
+                <header>
+                  <h3><a href="#">Wellness Retreats</a></h3>
+                </header>
+                <p>
+                  Wellness-focused packages that include activities such as yoga, meditation, and nature walks, complemented by healthy meals and spa-like
+                  treatments.
+                </p>
               </section>
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="images/hot-tug4.png" class="image featured"><img src="images/hot-tug4.png" alt="" /></a>
+                <a href="images/adventure4.jpg" class="image featured"><img src="images/adventure4.jpg" alt="" /></a>
+                <header>
+                  <h3><a href="#">Guided Outdoor Activities</a></h3>
+                </header>
+                <p>
+                  Wellness-focused packages that include activities such as yoga, meditation, and nature walks, complemented by healthy meals and spa-like
+                  treatments.
+                </p>
               </section>
             </div>
           </div>
