--- a/aboutus.html
+++ b/aboutus.html
@@ -23,7 +23,7 @@
                 <li><a href="guided.html">Guided Adventures</a></li>
               </ul>
             </li>
-            <li><a href="#">Custom experiences</a></li>
+            <li><a href="experiences.html">Custom experiences</a></li>
             <li class="current"><a href="aboutus.html">About us</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
