--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
                 <li><a href="camping.html">Camping Retreats</a></li>
                 <li><a href="tree-tent.html">Tree Tent Accommodations</a></li>
                 <li><a href="guided.html">Guided Adventures</a></li>
+                <li><a href="package-builder.html">Custom Package</a></li>
               </ul>
             </li>
             <li><a href="experiences.html">Custom experiences</a></li>
