--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a href="camping.html">Camping Retreats</a></li>
                 <li><a href="tree-tent.html">Tree Tent Accommodations</a></li>
                 <li><a href="guided.html">Guided Adventures</a></li>
+                <li><a href="package-builder.html">Custom Package</a></li>
               </ul>
             </li>
             <li><a href="experiences.html">Custom experiences</a></li>
@@ -32,10 +33,7 @@
 
       <section id="banner">
         <div class="inner">
-          <header>
-            <h2>JACUZZI JOURNEYS</h2>
-          </header>
-          <p>FLOAT THE BOW</p>
+          <img src="images/jj-logo.png" alt="" style="max-width: 450px;height: auto;" />
           <footer>
             <ul class="buttons stacked">
               <li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
@@ -198,7 +196,7 @@
         </header>
         <footer>
           <ul class="buttons">
-            <li><a href="#" class="button primary">Book now</a></li>
+            <li><a href="package-builder.html" class="button primary">Book now</a></li>
             <li><a href="contact.html" class="button">Contact us</a></li>
           </ul>
         </footer>
