--- a/offerings.html
+++ b/offerings.html
@@ -21,6 +21,7 @@
                 <li><a href="camping.html">Camping Retreats</a></li>
                 <li><a href="tree-tent.html">Tree Tent Accommodations</a></li>
                 <li><a href="guided.html">Guided Adventures</a></li>
+                <li><a href="package-builder.html">Custom Package</a></li>
               </ul>
             </li>
             <li><a href="experiences.html">Custom experiences</a></li>
@@ -59,7 +60,7 @@
                   scenic waterways, taking in breathtaking views, and enjoying the company of friends or family.
                 </p>
                 <ul class="buttons">
-                  <li><a href="#" class="button">Book now</a></li>
+                  <li><a href="package-builder.html" class="button">Book now</a></li>
                 </ul>
                 <span></span>
               </section>
@@ -75,7 +76,7 @@
                   providing guests with a chance to reconnect with nature and unwind under the stars.
                 </p>
                 <ul class="buttons">
-                  <li><a href="#" class="button">Book now</a></li>
+                  <li><a href="package-builder.html" class="button">Book now</a></li>
                 </ul>
                 <span></span>
               </section>
@@ -93,7 +94,7 @@
                   allowing guests to sleep amidst the trees while enjoying stunning views and the soothing sounds of nature.
                 </p>
                 <ul class="buttons">
-                  <li><a href="#" class="button">Book now</a></li>
+                  <li><a href="package-builder.html" class="button">Book now</a></li>
                 </ul>
                 <span></span>
               </section>
@@ -110,7 +111,7 @@
                   natural world.
                 </p>
                 <ul class="buttons">
-                  <li><a href="#" class="button">Book now</a></li>
+                  <li><a href="package-builder.html" class="button">Book now</a></li>
                 </ul>
                 <span></span>
               </section>
