--- a/package-builder.html
+++ b/package-builder.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Guided Adventures | Jacuzzi Journeys</title>
+    <title>Package builder | Jacuzzi Journeys</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -21,7 +21,7 @@
                 <li><a href="camping.html">Camping Retreats</a></li>
                 <li><a href="tree-tent.html">Tree Tent Accommodations</a></li>
                 <li><a href="guided.html">Guided Adventures</a></li>
-                <li><a href="package-builder.html">Custom Package</a></li>
+                <li class="current"><a href="package-builder.html">Custom Package</a></li>
               </ul>
             </li>
             <li><a href="experiences.html">Custom experiences</a></li>
@@ -34,7 +34,7 @@
       <section id="banner" class="guided">
         <div class="inner inside">
           <header>
-            <h2>Guided Adventures</h2>
+            <h2>Build a package</h2>
           </header>
         </div>
       </section>
@@ -42,8 +42,8 @@
       <article id="main">
         <header class="special container">
           <h2>
-            Offer guided tours and experiences led by experienced outdoor enthusiasts. Whether it's exploring hidden gems in the wilderness, embarking on scenic
-            hikes, or discovering local wildlife, guided adventures provide guests with memorable experiences and valuable insights into the natural world.
+            We allow you to customize your hot tug camping experiences based on your preferences and interests. Whether you're seeking a peaceful retreat, an
+            active adventure, or a social gathering, we provide options to cater to diverse needs.
           </h2>
         </header>
 
@@ -134,33 +134,50 @@
         <!-- Three -->
         <section class="wrapper style3 container special">
           <header class="major">
-            <h2>What to expect</h2>
+            <h2>Are you looking for a specific experience?</h2>
           </header>
 
-          <div class="row">
-            <div class="col-6 col-12-narrower">
-              <section>
-                <a href="images/adventure1.jpg" class="image featured"><img src="images/adventure1.jpg" alt="" /></a>
-              </section>
+          <form style="text-align: left">
+            <h3>Base Package</h3>
+            <div class="row gtr-50">
+              <div class="col-6 col-12-mobile">
+                <input type="checkbox" id="package1" placeholder="package 1" />
+                <label for="package1">Package 1</label>
+              </div>
+              <div class="col-6 col-12-mobile">
+                <input type="checkbox" id="package2" placeholder="package 2" />
+                <label for="package2">Package 2</label>
+              </div>
+              <div class="col-6 col-12-mobile">
+                <input type="checkbox" id="package3" placeholder="package 3" />
+                <label for="package3">Package 3</label>
+              </div>
+              <div class="col-6 col-12-mobile">
+                <input type="checkbox" id="package4" placeholder="package 4" />
+                <label for="package4">Package 4</label>
+              </div>
             </div>
-            <div class="col-6 col-12-narrower">
-              <section>
-                <a href="images/adventure2.jpg" class="image featured"><img src="images/adventure2.jpg" alt="" /></a>
-              </section>
+
+            <h3 style="margin-top: 48px;">Add ons</h3>
+            <div class="row gtr-50">
+              <div class="col-6 col-12-mobile">
+                <input type="checkbox" id="addon1" placeholder="addon 1" />
+                <label for="addon1">Package 1</label>
+              </div>
+              <div class="col-6 col-12-mobile">
+                <input type="checkbox" id="addon2" placeholder="addon 2" />
+                <label for="addon2">Package 2</label>
+              </div>
+              <div class="col-6 col-12-mobile">
+                <input type="checkbox" id="addon3" placeholder="addon 3" />
+                <label for="addon3">Package 3</label>
+              </div>
+              <div class="col-6 col-12-mobile">
+                <input type="checkbox" id="addon4" placeholder="addon 4" />
+                <label for="addon4">Package 4</label>
+              </div>
             </div>
-          </div>
-          <div class="row">
-            <div class="col-6 col-12-narrower">
-              <section>
-                <a href="images/adventure3.jpg" class="image featured"><img src="images/adventure3.jpg" alt="" /></a>
-              </section>
-            </div>
-            <div class="col-6 col-12-narrower">
-              <section>
-                <a href="images/adventure4.jpg" class="image featured"><img src="images/adventure4.jpg" alt="" /></a>
-              </section>
-            </div>
-          </div>
+          </form>
         </section>
       </article>
 
