--- a/aboutus.html
+++ b/aboutus.html
@@ -21,6 +21,7 @@
                 <li><a href="camping.html">Camping Retreats</a></li>
                 <li><a href="tree-tent.html">Tree Tent Accommodations</a></li>
                 <li><a href="guided.html">Guided Adventures</a></li>
+                <li><a href="package-builder.html">Custom Package</a></li>
               </ul>
             </li>
             <li><a href="experiences.html">Custom experiences</a></li>
@@ -99,7 +100,7 @@
         </header>
         <footer>
           <ul class="buttons">
-            <li><a href="#" class="button primary">Book now</a></li>
+            <li><a href="package-builder.html" class="button primary">Book now</a></li>
             <li><a href="contact.html" class="button">Contact us</a></li>
           </ul>
         </footer>
