--- a/experiences.html
+++ b/experiences.html
@@ -21,6 +21,7 @@
                 <li><a href="camping.html">Camping Retreats</a></li>
                 <li><a href="tree-tent.html">Tree Tent Accommodations</a></li>
                 <li><a href="guided.html">Guided Adventures</a></li>
+                <li><a href="package-builder.html">Custom Package</a></li>
               </ul>
             </li>
             <li class="current"><a href="experiences.html">Custom experiences</a></li>
@@ -41,8 +42,9 @@
       <article id="main">
         <header class="special container">
           <h2>
-            We allow you to customize your hot tug camping experiences based on your preferences and interests. Whether you're seeking a peaceful retreat, an
-            active adventure, or a social gathering, we provide options to cater to diverse needs.
+            Enhance your experience with customizable options tailored to your preferences. Enjoy themed adventures such as romantic getaways, family-friendly
+            trips, and wellness retreats. Our unique hot tug camping adventures cater to all types of travelers, ensuring unforgettable memories and
+            satisfaction for everyone.
           </h2>
         </header>
 
@@ -139,9 +141,9 @@
           <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="images/adventure1.jpg" class="image featured"><img src="images/adventure1.jpg" alt="" /></a>
+                <a href="package-builder.html" class="image featured"><img src="images/adventure1.jpg" alt="" /></a>
                 <header>
-                  <h3><a href="#">Romantic Getaways</a></h3>
+                  <h3><a href="package-builder.html">Romantic Getaways</a></h3>
                 </header>
                 <p>
                   Enjoy unforgettable adventures on the water with your one-of-a-kind portable hot tubs. Guests can soak in the warm waters while cruising along
@@ -151,9 +153,9 @@
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="images/adventure2.jpg" class="image featured"><img src="images/adventure2.jpg" alt="" /></a>
+                <a href="package-builder.html" class="image featured"><img src="images/adventure2.jpg" alt="" /></a>
                 <header>
-                  <h3><a href="#">Family-Friendly Adventures</a></h3>
+                  <h3><a href="package-builder.html">Family-Friendly Adventures</a></h3>
                 </header>
                 <p>Packages designed for families, including larger tents or cabins, kid-friendly activities, and safety features suitable for children.</p>
               </section>
@@ -162,9 +164,9 @@
           <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="images/adventure3.jpg" class="image featured"><img src="images/adventure3.jpg" alt="" /></a>
+                <a href="package-builder.html" class="image featured"><img src="images/adventure3.jpg" alt="" /></a>
                 <header>
-                  <h3><a href="#">Wellness Retreats</a></h3>
+                  <h3><a href="package-builder.html">Wellness Retreats</a></h3>
                 </header>
                 <p>
                   Wellness-focused packages that include activities such as yoga, meditation, and nature walks, complemented by healthy meals and spa-like
@@ -174,9 +176,9 @@
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="images/adventure4.jpg" class="image featured"><img src="images/adventure4.jpg" alt="" /></a>
+                <a href="package-builder.html" class="image featured"><img src="images/adventure4.jpg" alt="" /></a>
                 <header>
-                  <h3><a href="#">Guided Outdoor Activities</a></h3>
+                  <h3><a href="package-builder.html">Guided Outdoor Activities</a></h3>
                 </header>
                 <p>
                   Wellness-focused packages that include activities such as yoga, meditation, and nature walks, complemented by healthy meals and spa-like
@@ -196,7 +198,7 @@
         </header>
         <footer>
           <ul class="buttons">
-            <li><a href="#" class="button primary">Book now</a></li>
+            <li><a href="package-builder.html" class="button primary">Book now</a></li>
             <li><a href="contact.html" class="button">Contact us</a></li>
           </ul>
         </footer>
