--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <section id="banner">
         <div class="inner">
-          <img src="images/jj-logo.png" alt="" style="max-width: 450px;height: auto;" />
+          <img src="images/jj-logo.png" alt="" style="max-width: 450px; height: auto" />
           <footer>
             <ul class="buttons stacked">
               <li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
@@ -45,8 +45,10 @@
       <article id="main">
         <header class="special container">
           <h2>
-            Imagine soaking in a wood-fired hot tub while cruising along scenic waterways, surrounded by stunning landscapes and accompanied by good company.
-            That's the essence of a hot tug adventure with us.
+            At Jacuzzi Journey, our mission is to provide unforgettable outdoor experiences that blend the serenity of nature with the luxury of hot tug and
+            camping relaxation. We are dedicated to creating unique, eco-friendly adventures that rejuvenate the mind, body, and spirit, while ensuring
+            exceptional customer service and a deep respect for the environment. Our goal is to inspire a love for the outdoors and create lasting memories for
+            every guest.
           </h2>
         </header>
 
