--- a/index2.html
+++ b/index2.html
@@ -31,7 +31,7 @@
         </nav>
       </header>
 
-      <section id="banner version2">
+      <section id="banner" class="version2">
         <div class="inner">
           <img src="images/jj-logo.png" alt="" style="max-width: 450px; height: auto" />
           <footer>
