--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
       <article id="main">
         <header class="special container">
           <h2>
-            At Jacuzzi Journey, our mission is to provide unforgettable outdoor experiences that blend the serenity of nature with the luxury of hot tug and
-            camping relaxation. We are dedicated to creating unique, eco-friendly adventures that rejuvenate the mind, body, and spirit, while ensuring
-            exceptional customer service and a deep respect for the environment. Our goal is to inspire a love for the outdoors and create lasting memories for
-            every guest.
+            At Jacuzzi Journey, we aim to offer unforgettable outdoor experiences combining the serenity of nature with luxurious hot tub and camping
+            relaxation. We are committed to eco-friendly adventures that rejuvenate the mind, body, and spirit, while providing exceptional customer service and
+            respecting the environment. Our goal is to inspire a love for the outdoors and create lasting memories for every guest.
           </h2>
         </header>
 
