--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <section id="banner">
         <div class="inner">
-          <img src="images/jj-logo.png" alt="" style="max-width: 375px; height: auto" />
+          <img src="images/jj-logo.png" alt="" />
           <footer>
             <ul class="buttons stacked">
               <li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
