--- a/index.html
+++ b/index.html
@@ -46,9 +46,12 @@
         <header class="special container">
           <h2>
             At Jacuzzi Journey, we aim to offer unforgettable outdoor experiences combining the serenity of nature with luxurious hot tub and camping
-            relaxation. We are committed to eco-friendly adventures that rejuvenate the mind, body, and spirit, while providing exceptional customer service and
-            respecting the environment. Our goal is to inspire a love for the outdoors and create lasting memories for every guest.
+            relaxation.
           </h2>
+          <p>
+            We are committed to eco-friendly adventures that rejuvenate the mind, body, and spirit, while providing exceptional customer service and respecting
+            the environment. Our goal is to inspire a love for the outdoors and create lasting memories for every guest.
+          </p>
         </header>
 
         <!-- One -->
