--- a/offerings.html
+++ b/offerings.html
@@ -30,7 +30,7 @@
           </ul>
         </nav>
       </header>
-      <section id="banner">
+      <section id="banner" class="offerings">
         <div class="inner inside">
           <header>
             <h2>What do we offer?</h2>
