--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <img src="images/jj-logo.png" alt="" />
           <footer>
             <ul class="buttons stacked">
-              <li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
+              <li><a href="#experiences" class="button fit scrolly">Book your experience</a></li>
             </ul>
           </footer>
         </div>
@@ -53,8 +53,60 @@
           </p>
         </header>
 
+        <section id="experiences" class="wrapper style3 container special">
+          <header class="major">
+            <h2>Take a look at our <strong>unique experiences</strong></h2>
+          </header>
+
+          <div class="row">
+            <div class="col-6 col-12-narrower">
+              <section>
+                <a href="hot-tug.html" class="image featured"><img src="images/hot-tug.png" alt="Hot tug experience" /></a>
+                <header style="margin-bottom: 50px">
+                  <h3><a href="hot-tug.html">Hot Tug Experiences</a></h3>
+                </header>
+                <span></span>
+              </section>
+            </div>
+            <div class="col-6 col-12-narrower">
+              <section>
+                <a href="camping.html" class="image featured"><img src="images/camping-retreat.jpg" alt="Camping picture" /></a>
+                <header style="margin-bottom: 50px">
+                  <h3><a href="camping.html">Camping Retreats</a></h3>
+                </header>
+                <span></span>
+              </section>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6 col-12-narrower">
+              <section>
+                <a href="tree-tent.html" class="image featured"><img src="images/tent-tree.png" alt="Tent tree Accommodations" /></a>
+                <header style="margin-bottom: 50px">
+                  <h3><a href="tree-tent.html">Tree Tent Accommodations</a></h3>
+                </header>
+                <span></span>
+              </section>
+            </div>
+            <div class="col-6 col-12-narrower">
+              <section>
+                <a href="guided.html" class="image featured"><img src="images/grassi-lakes.jpg" alt="Grassi Lakes Hike" /></a>
+                <header style="margin-bottom: 50px">
+                  <h3><a href="guided.html">Guided Adventures</a></h3>
+                </header>
+                <span></span>
+              </section>
+            </div>
+          </div>
+          <footer class="major">
+            <ul class="buttons">
+              <li><a href="offerings.html" class="button">See More</a></li>
+            </ul>
+          </footer>
+        </section>
+
         <!-- One -->
-        <!-- <section class="wrapper style2 container special-alt">
+        <section class="wrapper style2 container special-alt">
           <div class="row gtr-50">
             <div class="col-8 col-12-narrower">
               <header>
@@ -93,10 +145,10 @@
               </ul>
             </div>
           </div>
-        </section> -->
+        </section>
 
         <!-- Two -->
-        <!-- <section class="wrapper style1 container special">
+        <section class="wrapper style1 container special">
           <div class="row">
             <div class="col-4 col-12-narrower">
               <section>
@@ -135,59 +187,6 @@
               </section>
             </div>
           </div>
-        </section> -->
-
-        <!-- Three -->
-        <section class="wrapper style3 container special">
-          <header class="major">
-            <h2>Take a look at our <strong>unique offerings</strong></h2>
-          </header>
-
-          <div class="row">
-            <div class="col-6 col-12-narrower">
-              <section>
-                <a href="hot-tug.html" class="image featured"><img src="images/hot-tug.png" alt="" /></a>
-                <header style="margin-bottom: 50px">
-                  <h3><a href="hot-tug.html">Hot Tug Experiences</a></h3>
-                </header>
-                <span></span>
-              </section>
-            </div>
-            <div class="col-6 col-12-narrower">
-              <section>
-                <a href="camping.html" class="image featured"><img src="images/camping-retreat.jpg" alt="" /></a>
-                <header style="margin-bottom: 50px">
-                  <h3><a href="camping.html">Camping Retreats</a></h3>
-                </header>
-                <span></span>
-              </section>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-6 col-12-narrower">
-              <section>
-                <a href="tree-tent.html" class="image featured"><img src="images/tent-tree.png" alt="" /></a>
-                <header style="margin-bottom: 50px">
-                  <h3><a href="tree-tent.html">Tree Tent Accommodations</a></h3>
-                </header>
-                <span></span>
-              </section>
-            </div>
-            <div class="col-6 col-12-narrower">
-              <section>
-                <a href="guided.html" class="image featured"><img src="images/adventures.jpg" alt="" /></a>
-                <header style="margin-bottom: 50px">
-                  <h3><a href="guided.html">Guided Adventures</a></h3>
-                </header>
-                <span></span>
-              </section>
-            </div>
-          </div>
-          <footer class="major">
-            <ul class="buttons">
-              <li><a href="offerings.html" class="button">See More</a></li>
-            </ul>
-          </footer>
         </section>
       </article>
 
