--- a/offerings.html
+++ b/offerings.html
@@ -15,16 +15,16 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li class="submenu current">
-              <a href="offerings.html">Offerings</a>
+              <a href="offerings.html">Experiences</a>
               <ul>
                 <li><a href="hot-tug.html">Hot Tug Experiences</a></li>
                 <li><a href="camping.html">Camping Retreats</a></li>
                 <li><a href="tree-tent.html">Tree Tent Accommodations</a></li>
                 <li><a href="guided.html">Guided Adventures</a></li>
+                <li><a href="experiences.html">Custom experiences</a></li>
                 <li><a href="package-builder.html">Custom Package</a></li>
               </ul>
             </li>
-            <li><a href="experiences.html">Custom experiences</a></li>
             <li><a href="aboutus.html">About us</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
